--- a/Arquivos/Arquivos.csproj
+++ b/Arquivos/Arquivos.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2999A0B-690B-4DCD-99C1-D2B47BD5AE28}</ProjectGuid>
+    <ProjectGuid>{ED7AEA3C-9CF0-4AA6-AD22-50D5E2CA5933}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Excecoes</RootNamespace>
-    <AssemblyName>Excecoes</AssemblyName>
+    <RootNamespace>Arquivos</RootNamespace>
+    <AssemblyName>Arquivos</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Excecoes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reserva.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
