--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2999A0B-690B-4DCD-99C1-D2B47BD5AE28}</ProjectGuid>
+    <ProjectGuid>{0A51004B-95F9-44E7-B438-CD7AD3B8B3FD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Excecoes</RootNamespace>
-    <AssemblyName>Excecoes</AssemblyName>
+    <RootNamespace>Interface</RootNamespace>
+    <AssemblyName>Interface</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Excecoes.cs" />
+    <Compile Include="Entidade\AluguelCarro.cs" />
+    <Compile Include="Entidade\NotaPagamento.cs" />
+    <Compile Include="Entidade\Veiculo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reserva.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
